<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.LsTrailerActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etIntro"
                    android:layout_width="259dp"
                    android:layout_height="118dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="64dp"
                    android:background="@drawable/edittextbg"
                    android:gravity="top|left"
                    android:hint="@string/mustfill"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/etTitle" />

                <ImageView
                    android:id="@+id/ivTakePic"
                    android:layout_width="429dp"
                    android:layout_height="415dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="37dp"
                    android:onClick="onTakePictureClick"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.425"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etIntro"
                    app:srcCompat="@drawable/camera" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="165dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="92dp"
                    android:text="@string/text_tvDate"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvD"
                    app:layout_constraintTop_toBottomOf="@+id/tvTrailer" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="77dp"
                    android:layout_marginTop="58dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/lsintro"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/etIntro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <Button
                    android:id="@+id/btnTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="61dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="121dp"
                    android:onClick="onTimeClick"
                    android:text="@string/text_btnTimePicker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toEndOf="@+id/btnDatePicker"
                    app:layout_constraintTop_toBottomOf="@+id/tvTime" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="72dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="66dp"
                    android:layout_marginEnd="29dp"
                    android:text="@string/lstitle"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/etTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="29dp"
                    android:layout_marginTop="51dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:hint="@string/mustfill"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/btnTimePicker" />

                <TextView
                    android:id="@+id/tvTrailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="194dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="193dp"
                    android:text="@string/trailer"
                    android:textSize="26dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="136dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:onClick="onDateClick"
                    android:text="@string/text_btnDatePicker"
                    app:layout_constraintEnd_toStartOf="@+id/btnTimePicker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvT" />

                <TextView
                    android:id="@+id/tvD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="82dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/lsdate"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/tvDate"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="377dp"
                    android:text="@string/upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/tvT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="13dp"
                    android:text="@string/lstime"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toStartOf="@+id/tvTime"
                    app:layout_constraintStart_toStartOf="@+id/tvD"
                    app:layout_constraintTop_toBottomOf="@+id/tvD" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="171dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/text_tvTime"
                    android:textSize="20dp"
                    app:layout_constraintStart_toEndOf="@+id/tvT"
                    app:layout_constraintTop_toBottomOf="@+id/tvDate" />

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="19dp"
                    app:layout_constraintBottom_toTopOf="@+id/ivTakePic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etIntro" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>